# dutch-customer-data-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
.sdk/def/: dutch-customer-data_0.1.0.json
.sdk/model/: sdk.aontu  sdk.json  sdk.jsonic
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  dutch-customer-data.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
go/core/: config.go  context.go  dutch-customer-data_sdk.go  helpers.go  operation.go  registry.go  response.go  result.go  target.go  types.go
go/entity/: eu_ap_i_entity.go  global_ap_i_entity.go  netherlands_ap_i_entity.go  types.go
go/feature/: audit_feature.go  base_feature.go  cache_feature.go  clienttrack_feature.go  (+14 more)
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  dutch-customer-data.rockspec  dutch-customer-data_sdk.lua  dutch-customer-data_types.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  dutchcustomerdata_sdk.php  features.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  dutchcustomerdata_sdk.py  dutchcustomerdata_types.py  features.py  pyproject.toml
py/core/: context.py  error.py  response.py
py/entity/: eu_ap_i_entity.py  global_ap_i_entity.py  netherlands_ap_i_entity.py
py/feature/: audit_feature.py  base_feature.py  clienttrack_feature.py  idempotency_feature.py  proxy_feature.py  rbac_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_eu_ap_i_direct.py  test_eu_ap_i_entity.py  test_exists.py  test_global_ap_i_direct.py  test_global_ap_i_entity.py  test_netherlands_ap_i_direct.py  test_netherlands_ap_i_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  feature_add.py  feature_hook.py  feature_init.py  make_context.py  make_error.py  make_fetch_def.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_body.py  prepare_method.py  prepare_path.py  register.py  result_headers.py  transform_request.py  transform_response.py
rb/: AGENTS.md  CLAUDE.md  DutchCustomerData_sdk.gemspec  DutchCustomerData_sdk.rb  DutchCustomerData_types.rb  README.md  REFERENCE.md  config.rb  features.rb
ts/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  package-lock.json  package.json
(+396 files in other folders)
